--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button onclick="switchAlter()">자아 전환</button>
       <a href="https://www.notion.so/237fc3e293dc804580fddb43ccdb8a5b?source=copy_link" target="_blank">📔 시스템 다이어리</a>
       <a href="https://www.notion.so/237fc3e293dc801fbc64e82f012e4438?source=copy_link" target="_blank">🌏 호주 정착 계획</a>
-      <a href="https://mx-didra-castle.vercel.app" target="_blank">🏰 Mx.Didra's Castle</a>
+      <a id="castle-link" href="https://mx-didra-castle.vercel.app" target="_blank" style="display: none;">🏰 Mx.Didra's Castle</a>
     </div>
   </div>
   <script src="script.js"></script>
