--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>시스템 런처</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>임선율 시스템 런처</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="container">
-    <h1>🧠 현재 자아: <span id="current-alter">온결</span></h1>
-    <div class="buttons">
-      <button onclick="switchAlter()">자아 전환</button>
-      <a href="https://www.notion.so/237fc3e293dc804580fddb43ccdb8a5b?source=copy_link" target="_blank">📔 시스템 다이어리</a>
-      <a href="https://www.notion.so/237fc3e293dc801fbc64e82f012e4438?source=copy_link" target="_blank">🌏 호주 정착 계획</a>
-      <a id="castle-link" href="https://mx-didra-castle.vercel.app" target="_blank" style="display: none;">🏰 Mx.Didra's Castle</a>
+  <div class="launcher">
+    <h1>🧠 임선율 시스템 런처</h1>
+    <div class="identity-check">
+      <label for="identity">현재 자아를 입력하세요:</label>
+      <input type="text" id="identity" placeholder="예: 선율, 온결" />
+      <button onclick="confirmIdentity()">확인</button>
+    </div>
+    <div id="links" style="display:none;">
+      <a href="https://www.notion.so/237fc3e293dc804580fddb43ccdb8a5b" target="_blank">📒 시스템 다이어리</a>
+      <a href="https://www.notion.so/237fc3e293dc801fbc64e82f012e4438" target="_blank">🛫 호주 정착 계획</a>
+      <a href="#" id="secretLink" target="_blank" style="display:none;">🏰 Mx.Didra's Castle</a>
     </div>
   </div>
   <script src="script.js"></script>
